--- a/requirements.txt
+++ b/requirements.txt
@@ -3,42 +3,71 @@ aiohttp==3.10.10
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+astroid==3.3.5
 attrs==24.2.0
+autopep8==2.3.1
+cachetools==5.5.0
 certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 colorlog==6.9.0
+dill==0.3.9
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.4
 fastapi-cli==0.0.5
 frozenlist==1.5.0
+google-api-core==2.22.0
+google-api-python-client==2.151.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.65.0
 h11==0.14.0
 hikari==2.1.0
 httpcore==1.0.6
+httplib2==0.22.0
 httptools==0.6.4
 httpx==0.27.2
 idna==3.10
+isort==5.13.2
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
 mongo==0.2.0
 multidict==6.1.0
+oauthlib==3.2.2
+platformdirs==4.3.6
 propcache==0.2.0
+proto-plus==1.25.0
+protobuf==5.28.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycodestyle==2.12.1
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+pylint==3.3.1
 pymongo==4.10.1
+pyparsing==3.2.0
 python-dotenv==1.0.1
 python-multipart==0.0.17
 PyYAML==6.0.2
+requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.9.4
+rsa==4.9
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.41.2
+tomlkit==0.13.2
 typer==0.12.5
 typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.3
 uvicorn==0.32.0
 watchfiles==0.24.0
 websockets==13.1
