--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ httplib2==0.22.0
 httptools==0.6.4
 httpx==0.27.2
 idna==3.10
+iniconfig==2.0.0
 isort==5.13.2
 Jinja2==3.1.4
 markdown-it-py==3.0.0
@@ -38,9 +39,12 @@ MarkupSafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
 mongo==0.2.0
+mongomock==4.2.0.post1
 multidict==6.1.0
 oauthlib==3.2.2
+packaging==24.1
 platformdirs==4.3.6
+pluggy==1.5.0
 propcache==0.2.0
 proto-plus==1.25.0
 protobuf==5.28.3
@@ -53,13 +57,16 @@ Pygments==2.18.0
 pylint==3.3.1
 pymongo==4.10.1
 pyparsing==3.2.0
+pytest==8.3.3
 python-dotenv==1.0.1
 python-multipart==0.0.17
+pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.9.4
 rsa==4.9
+sentinels==1.0.0
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.41.2
