--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ pluggy==1.5.0
 propcache==0.2.0
 proto-plus==1.25.0
 protobuf==5.28.3
+pyaml==24.9.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycodestyle==2.12.1
