--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,14 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 astroid==3.3.5
+async-timeout==4.0.3
 attrs==24.2.0
 autopep8==2.3.1
+Brotli==1.1.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+ciso8601==2.3.1
 click==8.1.7
 colorama==0.4.6
 colorlog==6.9.0
@@ -26,6 +29,7 @@ google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.65.0
 h11==0.14.0
 hikari==2.1.0
+hikari-lightbulb==3.0.0a14
 httpcore==1.0.6
 httplib2==0.22.0
 httptools==0.6.4
@@ -42,6 +46,7 @@ mongo==0.2.0
 mongomock==4.2.0.post1
 multidict==6.1.0
 oauthlib==3.2.2
+orjson==3.10.11
 packaging==24.1
 platformdirs==4.3.6
 pluggy==1.5.0
