Updated app configs
Removed gunicorn config file and moved to entrypoint

--- a/app.yaml
+++ b/app.yaml
@@ -1,24 +1,8 @@
 runtime: python312
 
-entrypoint: gunicorn -c gunicorn_conf.py main:api
+entrypoint: gunicorn -w 2 -b :8080 main:api
 
 instance_class: F1
 automatic_scaling:
   min_instances: 1
   max_instances: 1
-
-inbound_services:
-  - warmup
-
-handlers:
-  - url: /gamepicker
-    static_dir: gamepicker
-
-  - url: /.*
-    secure: always
-    redirect_http_response_code: 301
-    script: auto
-
-  - url: /_ah/warmup
-    static_files: static/img/favicon.ico
-    upload: static/img/favicon.ico
