--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 attr==0.3.2
 fastapi==0.115.4
 google_api_python_client==2.151.0
+gunicorn==23.0.0
 hikari-lightbulb==3.0.0a14
 mongomock==4.2.0.post1
 pymongo==4.10.1
