--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ pymongo==4.10.1
 pytest==8.3.3
 PyYAML==6.0.2
 uvicorn==0.32.0
+
+attrs~=24.2.0
+hikari~=2.1.0
+protobuf~=5.28.3
+google-api-python-client~=2.151.0
