--- a/requirements.txt
+++ b/requirements.txt
@@ -99,6 +99,7 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.3
 uvicorn==0.32.0
+uvicorn-worker==0.2.0
 wcwidth==0.2.13
 webencodings==0.5.1
 yarg==0.1.9
