added discord ids to config

--- a/config.yaml
+++ b/config.yaml
@@ -9,3 +9,8 @@ google:
   secrets:
     MONGO_TOKEN: ARBITRAGEXIV_MONGO_TOKEN
     BOT_TOKEN: BOT_TOKEN
+
+discord:
+  server_id: 141695517246750720
+  channel_id: 141695517246750720
+  wordle_app_user_id: 1211781489931452447
