--- a/config.yaml
+++ b/config.yaml
@@ -14,3 +14,8 @@ discord:
   server_id: 141695517246750720
   channel_id: 141695517246750720
   wordle_app_user_id: 1211781489931452447
+
+dev:
+  server_id: 1106152112557146152
+  channel_id: 1199661961907019786
+  wordle_app_user_id: 140155378137694208 # personal user id
