--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,7 @@ Pygments==2.18.0
 pymongo==4.10.1
 pyparsing==3.2.0
 pytest==8.3.3
+pytest-asyncio==1.3.0
 pytest-html==4.1.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
