update log level for hikari and pymongo

--- a/logging_config.yaml
+++ b/logging_config.yaml
@@ -15,3 +15,11 @@ loggers:
     handlers: [default]
     level: DEBUG
     propagate: True
+  "pymongo":
+    handlers: [default]
+    level: INFO
+    propagate: True
+  "hikari.ratelimits":
+    handlers: [default]
+    level: INFO
+    propagate: True
