Added wordle_ranks command to see avg and wins for all wordle users (#9)
* init WordleUser class

* init wordle_mongo_client

* init wordle_scores command

* fix: moved wordle_mongo_client to correct directory

* init wordle_mongo_client methods

* added unit tests for wordle mongo client

* added discord ids to config

* Init startup hooks to fetch user messages

* initialize wordle messages in startup hook

* added dev ids to configs

* split up startup_hooks functions to search and wordle_service

* added insert function to wordle mongo client

* updated WordleUser with default values

* fixed update_one in insert()

* implemented parse_wordle_message

* renamed get_winners to get_top_winners for clarity

* renamed get_avg_scores to get_top_avg_scores for clarity

* implemented wordle_ranks command

* fix: comments

* refactored score to be number of attempts

* Implement handle_wordle_result

* added wordle_reload command

* fixed wordle_scores not using count arg

* renamed wordle_scores -> wordle_ranks to match class name

* look up usernames if username is snowflake id

* updated wordle result listener

* cache username lookups in memory

* updated dev channel id

* fixed regex for score lines

* limit fetch_history to 10K items

--- a/config.yaml
+++ b/config.yaml
@@ -9,3 +9,13 @@ google:
   secrets:
     MONGO_TOKEN: ARBITRAGEXIV_MONGO_TOKEN
     BOT_TOKEN: BOT_TOKEN
+
+discord:
+  server_id: 141695517246750720
+  channel_id: 141695517246750720
+  wordle_app_user_id: 1211781489931452447
+
+dev:
+  server_id: 1106152112557146152
+  channel_id: 1442028574084169748
+  wordle_app_user_id: 140155378137694208 # personal user id
